2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_get_entry_text): Removed.
	(gnome_selector_set_entry_text): Removed.
	(gnome_selector_activate_entry): Removed.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (gnome_selector_bind_to_control): New function.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Made this a BonoboObject.
	(GNOME_TYPE_SELECTOR_ASYNC_HANDLE): New #define.
	(gnome_selector_async_handle_get_type): New function.
	(GNOME_TYPE_SELECTION_MODE): New #define.
	(gnome_selection_mode_get_type): New function.

	* gnome-selector.c: Use GObject and removed all GTK+ stuff.
	(PROP_ENTRY_WIDGET, PROP_SELECTOR_WIDGET, PROP_BROWSE_DIALOG):
	Removed these properties.

	* gnome-selector.[ch], gnome-selectorP.h: Moved here from libgnomeui.

	* libgnome.h: #include <libgnome/gnome-selector.h>.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* Makefile.am (libgnome_2_la_SOURCES): Added the CORBA sources.
	(libgnome_headers): Install Gnome.h.

	* libgnome.h: #include <libgnome/Gnome.h>.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-marshal.list, gnome-marshal-main.c: Moved here
	from libgnomeui.

	* Makefile.am: Create gnome-marshal.[ch] from gnome-marshal.list.

	* libgnome.h: #include <libgnome/gnome-marshal.h>.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Use the new glib-mkenums instead of our own
	gnome-makeenums.pl and gnome-maketypes.awk.

	* libgnometypebuiltins.[ch]: New generated files; provide a
	type installation routine for each enum and flags type.

	* gnome-program.c, libgnomeP.h (libgnome_type_init): This
	function no longer exists.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* libgnome-init.[ch]
	(GNOME_PARAM_DESKTOP_CONFIG_DATABASE): New property.
	(GNOME_PARAM_DESKTOP_CONFIG_MONIKER): Likewise.
	(gnome_program_get_desktop_config_database): New function.

	* gnome-preferences.[ch]: New files; this has the same API than