@@ -1,3 +1,8 @@
+2001-05-01  Martin Baulig  <baulig@suse.de>
+
+	* gnome-preferences.h (GNOME_PAD, GNOME_PAD_SMALL, GNOME_PAD_BIG):
+	Moved these #defines here from gnome-uidefs.h.
+
 2001-04-30  Martin Baulig  <baulig@suse.de>
 
 	* gnome-selector.h (gnome_selector_get_entry_text): Removed.
